# AllskyMQTTBatteryMonitor

./: .gitignore  AllskyMQTTBatteryMonitor.service  AllskyMQTTBatteryMonitor.service.example  BatteryPercent.txt  BatterySpecs.txt  README.md  StaticVars.txt  StaticVars.txt.example  UpdateBatteryFile.py  UpdateBatteryFiles.py  main.py  mqtt.py  pyproject.toml
